k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "5"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /admin/logs
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 80
